--- a/scss/font/font-style-status.scss
+++ b/scss/font/font-style-status.scss
@@ -1,5 +1,5 @@
-.h\:.a:hover, .a\:.a:active, .f\:.a:focus{cursor: pointer;}
-.h\:.b:hover, .a\:.b:active, .f\:.b:focus{font-weight: bold;}
-.h\:.u:hover, .a\:.u:active, .f\:.u:focus{text-decoration: underline;}
-.h\:.i:hover, .a\:.i:active, .f\:.i:focus{font-style: italic;}
-.h\:.u:hover, .a\:.u:active, .f\:.u:focus{text-decoration: line-through;}
+.h\:a:hover, .a\:a:active, .f\:a:focus{cursor: pointer;}
+.h\:b:hover, .a\:b:active, .f\:b:focus{font-weight: bold;}
+.h\:u:hover, .a\:u:active, .f\:u:focus{text-decoration: underline;}
+.h\:i:hover, .a\:i:active, .f\:i:focus{font-style: italic;}
+.h\:s:hover, .a\:s:active, .f\:s:focus{text-decoration: line-through;}
