--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -4,8 +4,8 @@
 .dn{display: none;}
 .di{display: inline;}
 .dib{display: inline-block;}
-.df{display: flex;}
-.dif{display: inline-flex;}
+// .df{display: flex;}
+// .dif{display: inline-flex;}
 
 .pr{position: relative;}
 .ps{position: sticky;}
