--- a/scss/background/dark.scss
+++ b/scss/background/dark.scss
@@ -1,5 +1,6 @@
 @import '../variable';
 
+.bg{background-color: $bg-dark;}
 @each $n in $bg-color-value {
   .bg-#{$n}{background-color: transparentize($bg-color-dark, 1 - $n / 25)}
 }
