--- a/scss/init.scss
+++ b/scss/init.scss
@@ -11,7 +11,7 @@ ul, ol{list-style-type: none;}
 a {color: inherit;text-decoration: none;}
 
 input, button, textarea, select, button{
-  margin: 0;padding: 0;border-width: 1px;
+  margin: 0;padding: 0;border-width: 0px;
   border-color: transparent;color: inherit;
   font-size: inherit;outline: none;
   background-color: transparent;
@@ -19,6 +19,9 @@ input, button, textarea, select, button{
   -webkit-appearance:none;appearance: none;
   border-style: solid;
 }
+textarea{overflow: auto;}
+input::-ms-clear{display: none;}
+select::-ms-expand{display: none;}
 
 ::placeholder{color: inherit;opacity: 0.6;}
 
@@ -27,3 +30,5 @@ img, svg, canvas{vertical-align: middle;}
 table{border-collapse: collapse;border-spacing: 0;}
 
 th, td{text-align: left;}
+
+code, pre, tt{font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;}
