--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -35,7 +35,7 @@ $text-color-dark: #fff;    // 深色模式下文字颜色
 $text-color-value: 2, 4, 6, 8, 10;
 
 $bg-light: #fff;           // 亮色模式下的基础背景色（一般用在body上）
-$bg-dark: #111;            // 暗色模式下的基础背景色（一般用在body上）
+$bg-dark: #181818;            // 暗色模式下的基础背景色（一般用在body上）
 $bg-color: #111;           // 背景颜色
 $bg-color-dark: #fff;      // 深色模式下背景颜色
 $bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
@@ -49,9 +49,9 @@ $colors: (
   w: #ffffff, // white
   b: #008cff, // blue
   g: #00d369, // green
-  o: #ffbb00, // orange
+  o: #ffa600, // orange
   r: #ff4111, // red
-  blk: #111, // black  
+  blk: #000, // black  
 );
 $colors-value: 1, 2, 4, 6, 8;
 
