--- a/scss/layout/layout-media.scss
+++ b/scss/layout/layout-media.scss
@@ -32,6 +32,11 @@
     .#{$key}\:fu{width: 100%;height: 100%;left: 0;top: 0;} // full
 
     .#{$key}\:ma{margin: 0 auto;}
+    
+    .#{$key}\:lf-0{left: 0;}
+    .#{$key}\:rt-0{right: 0;}
+    .#{$key}\:tp-0{top: 0;}
+    .#{$key}\:btm-0{bottom: 0;}
 
     // .#{$key}\:oh{overflow: hidden;}
     // .#{$key}\:ov{overflow: visible;}
