--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -44,3 +44,8 @@
 
 .pre{white-space: pre-wrap}
 .tlf{table-layout: fixed;}
+
+.lf-0{left: 0;}
+.rt-0{right: 0;}
+.tp-0{top: 0;}
+.btm-0{bottom: 0;}
