--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -30,24 +30,24 @@ $grid-gap: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50;
 $transition-during: 100, 200, 300, 400, 500;
 
 // 颜色相关
-$text-color: #111;         // 文字颜色
+$text-color: #000;         // 文字颜色
 $text-color-dark: #fff;    // 深色模式下文字颜色
 $text-color-value: 2, 4, 6, 8, 10;
 
 $bg-light: #fff;           // 亮色模式下的基础背景色（一般用在body上）
 $bg-dark: #13161b;            // 暗色模式下的基础背景色（一般用在body上）
-$bg-color: #111;           // 背景颜色
+$bg-color: #13161b;           // 背景颜色
 $bg-color-dark: #fff;      // 深色模式下背景颜色
 $bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
 
-$border-color: #111;       // 边框颜色
+$border-color: #13161b;       // 边框颜色
 $border-color-dark: #fff;  // 深色模式下边框颜色
 $border-color-value: 1, 2, 3, 4, 5, 0;
 
 // 此处的颜色并不会受黑色模式的影响
 $colors: (
   w: #ffffff, // white
-  b: #008cff, // blue
+  b: #1890ff, // blue
   g: #00d369, // green
   o: #ffa600, // orange
   r: #ff4111, // red
@@ -57,8 +57,7 @@ $colors-value: 1, 2, 4, 6, 8;
 
 // media query
 $media-query: (
-  // xl: 9999,
-  // lg: 1920,
+  lg: 1920,
   md: 1366,
   sm: 1000,
   xs: 768,
