--- a/scss/layout/flex-media.scss
+++ b/scss/layout/flex-media.scss
@@ -7,6 +7,14 @@
     .#{$key}\:fc{display: flex;flex-direction: column;}
     .#{$key}\:ifr{display: inline-flex;flex-direction: row;}
     .#{$key}\:ifc{display: inline-flex;flex-direction: column;}
+    
+    .#{$key}\:as{align-items: flex-start;}
+    .#{$key}\:ac{align-items: center;}
+    .#{$key}\:ae{align-items: flex-end;}
+
+    .#{$key}\:js{justify-content: flex-start;}
+    .#{$key}\:jc{justify-content: center;}
+    .#{$key}\:je{justify-content: flex-end;}
     .#{$key}\:fw{flex-wrap: wrap;}
     @for $i from 1 through $flex {
       .#{$key}\:f-#{$i}{flex: #{$i};}
