--- a/scss/margin-padding/padding.scss
+++ b/scss/margin-padding/padding.scss
@@ -2,8 +2,13 @@
 
 @each $num in $padding {
   .p-#{$num}{padding: #{$num}px}
+}
+@each $num in $padding {
   .px-#{$num}{padding-left: #{$num}px;padding-right: #{$num}px;}
   .py-#{$num}{padding-top: #{$num}px;padding-bottom: #{$num}px}
+}
+
+@each $num in $padding {
   .pt-#{$num}{padding-top: #{$num}px}
   .pr-#{$num}{padding-right: #{$num}px}
   .pb-#{$num}{padding-bottom: #{$num}px}
