--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -57,9 +57,10 @@ $colors-value: 1, 2, 4, 6, 8;
 
 // media query
 $media-query: (
-  lg: 1920,
-  md: 1366,
-  sm: 1000,
-  xs: 768,
+  // xl: 9999,
+  lg: 1921,
+  md: 1367,
+  sm: 1001,
+  xs: 769,
 );
 
