--- a/scss/init.scss
+++ b/scss/init.scss
@@ -1,7 +1,7 @@
 html, body, h1, h2, h3, h4, h5, h6, p, ul, li, dl, dt, dd, ol{
   margin: 0;padding: 0;box-sizing: border-box;font-weight: normal;
 }
-body{font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+body{font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, 'Segoe UI', Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
 div{box-sizing: border-box;}
 *[tabindex]{outline: none;}
@@ -13,12 +13,10 @@ a {color: inherit;text-decoration: none;}
 input, button, textarea, select, button{
   margin: 0;padding: 0;border-width: 0px;
   border-color: transparent;color: inherit;
-  font-size: inherit;outline: none;
-  background-color: transparent;
-  font-family: inherit;box-sizing: border-box;
+  font: inherit;outline: none;
+  background-color: transparent;box-sizing: border-box;
   -webkit-appearance:none;appearance: none;
   border-style: solid;border-radius: 0;
-  font-weight: inherit;
 }
 textarea{overflow: auto;}
 input::-ms-clear{display: none;}
