--- a/scss/font/font-size.scss
+++ b/scss/font/font-size.scss
@@ -1,5 +1,6 @@
 @import '../variable';
 
-@each $n in $font-size {
-  .fs-#{$n}{font-size: #{$n}px}
+@for $i from 0 through $font-size-max {
+  $num: $i * $font-size-step;
+  .fs-#{$i}{font-size: #{$num}rem}
 }
