--- a/scss/init.scss
+++ b/scss/init.scss
@@ -1,20 +1,23 @@
 html, body, h1, h2, h3, h4, h5, h6, p, ul, li, dl, dt, dd, ol{
   margin: 0;padding: 0;box-sizing: border-box;font-weight: normal;
 }
+html{font-size: 16px;}
 body{font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, 'Segoe UI', Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
-div{box-sizing: border-box;}
-*[tabindex]{outline: none;}
+*{outline: none;}
+*, ::before, ::after{box-sizing: border-box;}
 
 ul, ol{list-style-type: none;}
 
 a {color: inherit;text-decoration: none;}
 
+button{cursor: pointer;}
+
 input, button, textarea, select, button{
   margin: 0;padding: 0;border-width: 0px;
   border-color: transparent;color: inherit;
   font: inherit;outline: none;
-  background-color: transparent;box-sizing: border-box;
+  background-color: transparent;
   -webkit-appearance:none;appearance: none;
   border-style: solid;border-radius: 0;
 }
