--- a/scss/layout/flex.scss
+++ b/scss/layout/flex.scss
@@ -1,6 +1,6 @@
 @import '../variable';
 
-@for $i from 1 through $flex {
+@for $i from 1 through $flex-max {
   .f-#{$i}{flex: #{$i};}
 }
 .fr{display: flex;flex-direction: row;}
