字体大小调整

--- a/scss/font/font-size.scss
+++ b/scss/font/font-size.scss
@@ -2,5 +2,5 @@
 
 @for $i from 0 through $font-size-max {
   $num: $i * $font-size-step;
-  .fs-#{$i}{font-size: #{$num}rem}
+  .fs-#{$num}{font-size: #{$num}rem}
 }
