--- a/scss/others/z-index.scss
+++ b/scss/others/z-index.scss
@@ -1,5 +1,5 @@
 @import '../variable';
 
-@each $n in $z-index {
-  .z-#{$n}{z-index: #{$n}}
+@for $i from 0 through $z-index-max{
+  .z-#{$i}{z-index: $i;}
 }
