--- a/scss/layout/flex.scss
+++ b/scss/layout/flex.scss
@@ -7,7 +7,7 @@
 .fc{display: flex;flex-direction: column;}
 .ifr{display: inline-flex;flex-direction: row;}
 .ifc{display: inline-flex;flex-direction: column;}
-.fw{flex-wrap: wrap;}
+.wrap{flex-wrap: wrap;}
 
 .as{align-items: flex-start;}
 .ac{align-items: center;}
