--- a/scss/others/transition.scss
+++ b/scss/others/transition.scss
@@ -6,7 +6,7 @@ $trans: (
   bg: background-color,
   o: opacity,
   bc: border-color,
-  bs: box-shadow,
+  shadow: box-shadow,
   tsfm: transform
 );
 
