--- a/scss/font/font-style-status.scss
+++ b/scss/font/font-style-status.scss
@@ -1,5 +1,19 @@
-.h\:a:hover, .a\:a:active, .f\:a:focus{cursor: pointer;}
-.h\:b:hover, .a\:b:active, .f\:b:focus{font-weight: bold;}
-.h\:u:hover, .a\:u:active, .f\:u:focus{text-decoration: underline;}
-.h\:i:hover, .a\:i:active, .f\:i:focus{font-style: italic;}
-.h\:s:hover, .a\:s:active, .f\:s:focus{text-decoration: line-through;}
+.h\:a:hover{cursor: pointer;}
+.a\:a:active{cursor: pointer;}
+.f\:a:focus{cursor: pointer;}
+
+.h\:b:hover{font-weight: bold;}
+.a\:b:active{font-weight: bold;}
+.f\:b:focus{font-weight: bold;}
+
+.h\:u:hover{text-decoration: underline;}
+.a\:u:active{text-decoration: underline;}
+.f\:u:focus{text-decoration: underline;}
+
+.h\:i:hover{font-style: italic;}
+.a\:i:active{font-style: italic;}
+.f\:i:focus{font-style: italic;}
+
+.h\:s:hover{text-decoration: line-through;}
+.a\:s:active{text-decoration: line-through;}
+.f\:s:focus{text-decoration: line-through;}
