--- a/scss/init.scss
+++ b/scss/init.scss
@@ -5,7 +5,7 @@ html{font-size: 16px;}
 body{font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, 'Segoe UI', Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
 *{outline: none;-webkit-tap-highlight-color:transparent;}
-*, ::before, ::after{box-sizing: border-box;}
+*, ::before, ::after{box-sizing: border-box;border-width: 0;border-style: solid;}
 
 ul, ol{list-style-type: none;}
 
