--- a/scss/margin-padding/margin-padding.scss
+++ b/scss/margin-padding/margin-padding.scss
@@ -1,4 +1,13 @@
 @import '../variable';
+
+.m-a{margin: auto;}
+.mx-a{margin-left: auto;margin-right: auto;}
+.my-a{margin-top: auto;margin-bottom: auto;}
+.mt-a{margin-top: auto;}
+.mr-a{margin-right: auto;}
+.mb-a{margin-bottom: auto;}
+.ml-a{margin-left: auto;}
+
 @for $i from 0 through $margin-padding-max {
   $num: $i * $margin-padding-step;
   .m-#{$i}{margin: #{$num}em}
