--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -46,7 +46,7 @@ $during-step: 100;
 // 颜色相关
 $text-color: #000;         // 文字颜色
 $text-color-dark: #fff;    // 深色模式下文字颜色
-$text-color-value: 2, 4, 6, 8, 10;
+$text-color-value: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 
 $bg-light: #fff;           // 亮色模式下的基础背景色（一般用在body上）
 $bg-dark: #0d1117;            // 暗色模式下的基础背景色（一般用在body上）
